[gd_scene load_steps=5 format=3 uid="uid://cffksp8uaiebw"]

[ext_resource type="Theme" uid="uid://bnp65kle34ngr" path="res://scenes/ui/game_ui_theme.tres" id="1_bw0rf"]
[ext_resource type="Script" path="res://scenes/ui/day_night_panel.gd" id="2_dwq87"]
[ext_resource type="Texture2D" uid="uid://crl8djg0q4mkk" path="res://assets/ui/basic_ui_sprites.png" id="2_erjd0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a4mse"]
atlas = ExtResource("2_erjd0")
region = Rect2(261, 2, 7, 12)

[node name="DayNightPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_bw0rf")
script = ExtResource("2_dwq87")

[node name="DayPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -80.0
offset_bottom = 26.0
theme_type_variation = &"DayNightCounterPanel"

[node name="MarginContainer" type="MarginContainer" parent="DayPanel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="DayLabel" type="Label" parent="DayPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayNightLabel"
text = "DAY 0
"

[node name="TimePanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -80.0
offset_top = 28.0
offset_bottom = 54.0
theme_type_variation = &"DayNightCounterPanel"

[node name="MarginContainer" type="MarginContainer" parent="TimePanel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="TimeLabel" type="Label" parent="TimePanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayNightLabel"
text = "00:00"

[node name="SpeedControl" type="Control" parent="."]
anchors_preset = 0
offset_left = -80.0
offset_top = 56.0
offset_bottom = 74.0

[node name="NormalSpeedButton" type="Button" parent="SpeedControl"]
layout_mode = 0
offset_right = 26.0
offset_bottom = 18.0
theme_type_variation = &"DayNightButton"

[node name="TextureRect" type="TextureRect" parent="SpeedControl/NormalSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -6.0
offset_right = 4.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_a4mse")

[node name="FastSpeedButton" type="Button" parent="SpeedControl"]
layout_mode = 0
offset_left = 27.0
offset_right = 53.0
offset_bottom = 18.0
theme_type_variation = &"DayNightButton"

[node name="TextureRect" type="TextureRect" parent="SpeedControl/FastSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_a4mse")

[node name="TextureRect2" type="TextureRect" parent="SpeedControl/FastSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -6.0
offset_right = 1.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_a4mse")

[node name="FastestSpeedButton" type="Button" parent="SpeedControl"]
layout_mode = 0
offset_left = 54.0
offset_right = 80.0
offset_bottom = 18.0
theme_type_variation = &"DayNightButton"

[node name="TextureRect" type="TextureRect" parent="SpeedControl/FastestSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -6.0
offset_right = 8.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_a4mse")

[node name="TextureRect2" type="TextureRect" parent="SpeedControl/FastestSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -6.0
offset_right = 4.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_a4mse")

[node name="TextureRect3" type="TextureRect" parent="SpeedControl/FastestSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_a4mse")

[connection signal="pressed" from="SpeedControl/NormalSpeedButton" to="." method="_on_normal_speed_button_pressed"]
[connection signal="pressed" from="SpeedControl/FastSpeedButton" to="." method="_on_fast_speed_button_pressed"]
[connection signal="pressed" from="SpeedControl/FastestSpeedButton" to="." method="_on_fastest_speed_button_pressed"]
